Fixed spacing

--- a/src/work-experience.css
+++ b/src/work-experience.css
@@ -1,11 +1,11 @@
 .work {
-    padding: 1rem;
-    background-color: white;
-    border-radius: 1rem;
-    max-width: 30rem;
-    max-height: 15rem;
-    margin: 1rem; 
-    box-shadow: 10px 10px 5px grey;
+  padding: 1rem;
+  background-color: white;
+  border-radius: 1rem;
+  max-width: 30rem;
+  max-height: 15rem;
+  margin: 1rem;
+  box-shadow: 10px 10px 5px grey;
 }
 
 .details {
@@ -13,15 +13,14 @@
   text-align: left;
 }
 .wrapper {
-    text-align: center;
+  text-align: center;
 }
 
 .job {
-    text-align: left;
-    display: inline-block;
-    padding-right: 3rem;
+  text-align: left;
+  display: inline-block;
 }
 
 .work img {
-    padding-right: 1rem;
+  padding-right: 1rem;
 }
